# Fake.hs

./: .gitignore  Makefile  README.md  fake.cabal
examples/: Main.hs
src/: Fake.hs
src/Fake/: Address.hs  Combinators.hs  Core.hs  Internet.hs  Person.hs  Primitives.hs
src/Fake/Data/: Loader.hs
tests/: Main.hs
tests/Fake/: AddressTest.hs  CoreTest.hs  InternetTest.hs  PrimitivesTest.hs
